fix alignment of mobileview navigation

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,11 +24,11 @@ body{
             display: none;
          }
         .mobileView{
-            background-color: white;
+            background-color: #f4d7d4;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            height: 50px;
+            
             .fa-bars{
                 display: block;
                 cursor: pointer;
@@ -43,17 +43,16 @@ body{
                 display: none;
                 flex-direction: column;
                 // height: 80vh;
-                width: 100%;
+                width: 60%;
                 background-color: $lightGrey;
                 opacity: 0.9;
                 position: fixed;
-                                
-                                
+                top: 0;                               
             
                 .fa-times{
-                    color: #fff;
+                    color:$greyish;
                     font-size: 30px;
-                    right: 0;
+                    // right: 0;
                     margin-left: 85%;
                     margin-top: 5%;
                     i:hover {
@@ -61,14 +60,18 @@ body{
                     }
                 }
                 .mobile-menu-items{
-                    color: $greyish;
+                    color: $orangish;
                     font-weight: 600;
                     font-size: 32px;
                     line-height: 44px;
                     margin-left: 10%;
                     margin-top: 5%;
-                    
-                    
+                    text-decoration: none;                 
+                                        
+                }
+                .mobile-menu-items:hover{
+                    color: $greyish;
+                    cursor: pointer;
                 }
             }
         }
